--- a/src/sass/global/variables.scss
+++ b/src/sass/global/variables.scss
@@ -53,6 +53,7 @@ $container-max-widths: (
     --c-text-second: rgba(0, 0, 0, 0.6);
     --c-lines: rgba(39, 39, 39, 0.6);
     --c-bg: rgb(245, 245, 245);
+    --c-bg-light: rgba(242, 242, 242, 1);
     --c-white: rgb(255, 255, 255);
     --c-black: rgb(0, 0, 0);
     --c-error: red;
