--- a/src/twig/layouts/base.twig
+++ b/src/twig/layouts/base.twig
@@ -18,6 +18,7 @@
 
 {% include 'header.twig' %}
 {% include 'mobile-side.twig' %}
+{% include '../components/fly-cart.twig' %}
 <main class="main {% block mainClass %}{% endblock %}">
     {% block content %}{% endblock %}
 </main>
