--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -24,6 +24,7 @@
 @import "blocks/default/overlay";
 @import "blocks/default/container";
 @import "blocks/default/section";
+@import "blocks/default/scroll-block";
 
 @import "layouts/body";
 @import "layouts/header";
@@ -40,6 +41,7 @@
 @import "blocks/card";
 @import "blocks/card-slider";
 @import "blocks/age-control";
+@import "blocks/fly-cart";
 
 @import "pages/p-index";
 @import "pages/p-catalog";
