--- a/src/twig/layouts/header.twig
+++ b/src/twig/layouts/header.twig
@@ -14,10 +14,11 @@
                 <svg class="icon"><use xlink:href="#lk"/></svg>
                 <span class="header__link-text">Личный кабинет</span>
             </a>
-            <a href="/cart.html" class="header__cart link _with-icon">
+            <button class="header__cart link _with-icon js-cart-btn" type="button">
                 <svg class="icon"><use xlink:href="#cart"/></svg>
                 <span class="header__link-text">Корзина пуста</span>
-            </a>
+                <span class="header__cart-num">0</span>
+            </button>
         </div>
     </div>
 </header>
