--- a/src/sass/blocks/default/btn.scss
+++ b/src/sass/blocks/default/btn.scss
@@ -63,6 +63,10 @@
         .icon {
             margin-right: 20px;
         }
+
+        span {
+            line-height: 1;
+        }
     }
 
     &._paper-disabled {
