--- a/src/sass/pages/p-index.scss
+++ b/src/sass/pages/p-index.scss
@@ -11,8 +11,21 @@
         }
     }
 
+    .h1 {
+        text-align: center;
+        @include media-breakpoint-up(lg) {
+            text-align: left;
+        }
+    }
+
     .socials {
+        margin-left: auto;
+        margin-right: auto;
         @extend .margin-default !optional;
+        @include media-breakpoint-up(lg) {
+            margin-left: 0;
+            margin-right: 0;
+        }
     }
 
     &__btn-inner {
