Сделана контактная информация в ЛК

--- a/src/sass/blocks/default/checkbox.scss
+++ b/src/sass/blocks/default/checkbox.scss
@@ -48,7 +48,7 @@
         content: "";
         position: absolute;
         top: 50%;
-        left: 5%;
+        left: 7px;
         width: calc(var(--checkboxSize) / 2);
         height: calc(var(--checkboxSize) - 4px);
         border: solid var(--c-white);
