--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -14,6 +14,7 @@
 @import "blocks/default/checkbox";
 @import "blocks/default/radio";
 @import "blocks/default/input";
+@import "blocks/default/input2";
 @import "blocks/default/modal";
 @import "blocks/default/accordion";
 @import "blocks/default/btn";
@@ -25,6 +26,7 @@
 @import "blocks/default/container";
 @import "blocks/default/section";
 @import "blocks/default/scroll-block";
+@import "blocks/default/select2";
 
 @import "layouts/body";
 @import "layouts/header";
