--- a/src/twig/pages/catalog.twig
+++ b/src/twig/pages/catalog.twig
@@ -10,18 +10,23 @@
     },
     {
         name: 'Футболки',
+        link: '#'
     },
     {
         name: 'Свитшоты и худи',
+        link: '#'
     },
     {
         name: 'Бомберы',
+        link: '#'
     },
     {
         name: 'Чехлы',
+        link: '#'
     },
     {
         name: 'Сумки',
+        link: '#'
     },
 ] %}
 
