--- a/src/twig/layouts/base.twig
+++ b/src/twig/layouts/base.twig
@@ -27,6 +27,8 @@
 {% include '../components/age-control.twig' %}
 <div class="overlay js-overlay"></div>
 <div id="svg-icons"></div>
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+<link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" rel="stylesheet"/>
 <link rel="stylesheet" href="https://unpkg.com/swiper@7/swiper-bundle.min.css"/>
-
+<script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
 </body>
