--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -50,5 +50,6 @@
 @import "pages/p-card";
 @import "pages/p-contacts";
 @import "pages/p-lk";
+@import "pages/p-history";
 @import "pages/p-success";
 @import "pages/p-404";
