--- a/src/twig/pages/404.twig
+++ b/src/twig/pages/404.twig
@@ -12,7 +12,7 @@
         </div>
 
         <div class="p-404__wrapper">
-            <img class="p-404__img" src="/assets/img/custom/main-girl.png" alt="">
+            <img class="p-404__img lazy" data-src="/assets/img/custom/art-woman.png" alt="">
         </div>
     </div>
 {% endblock %}
