--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -44,6 +44,7 @@
 @import "blocks/card-slider";
 @import "blocks/age-control";
 @import "blocks/fly-cart";
+@import "blocks/current-order";
 
 @import "pages/p-index";
 @import "pages/p-catalog";
