--- a/src/twig/components/current-order.twig
+++ b/src/twig/components/current-order.twig
@@ -1,89 +1,129 @@
-<section class="current-order">
-    <div class="current-order__header">
-        <p class="current-order__num">
-            <strong>№ elfiesshop0001</strong> от 12.09.2022
-        </p>
-        <div class="current-order__header-col">
-            <span class="current-order__header-desc">Сумма заказа</span>
-            <span class="current-order__header-term">7 000 руб.</span>
+<section class="current-order js-order">
+    <div class="current-order__inner">
+        <div class="current-order__header">
+            <p class="current-order__num">
+                <strong>№ elfiesshop0001</strong> от 12.09.2022
+            </p>
+            <div class="current-order__header-col">
+                <span class="current-order__header-desc">Сумма заказа</span>
+                <span class="current-order__header-term">7 000 руб.</span>
+            </div>
+            <div class="current-order__header-col">
+                <span class="current-order__header-desc">Статус </span>
+                <span class="current-order__header-term">Отправлен</span>
+            </div>
+            <div class="current-order__header-col">
+                <span class="current-order__header-desc">Трек-код</span>
+                <span class="current-order__header-term">#3247324</span>
+            </div>
+            <div><a class="btn _paper" href="#">Отследить</a></div>
+            <button class="current-order__header-visible" type="button">
+                <svg class="icon">
+                    <use xlink:href="#arrow"></use>
+                </svg>
+            </button>
         </div>
-        <div class="current-order__header-col">
-            <span class="current-order__header-desc">Статус </span>
-            <span class="current-order__header-term">Отправлен</span>
-        </div>
-        <div class="current-order__header-col">
-            <span class="current-order__header-desc">Трек-код</span>
-            <span class="current-order__header-term">#3247324</span>
-        </div>
-        <a class="btn _paper" href="#">Отследить</a>
-        <button class="current-order__header-visible" type="button">
-            <svg class="icon">
-                <use xlink:href="#arrow"></use>
-            </svg>
-        </button>
-    </div>
-    <div class="current-order__body">
-        <div class="current-order__items margin-default">
-            <div class="current-order__row">
-                <img class="current-order__img" src="/assets/img/catalog/item-1.png" alt="">
-                <div class="current-order__col">
-                    <span class="current-order__name">Комикс</span>
-                    <span class="current-order__header-desc">Артикул №00001</span>
+        <div class="current-order__body js-order-body">
+            <div class="current-order__items margin-default">
+                <div class="current-order__row">
+                    <img class="current-order__img" src="/assets/img/catalog/item-1.png" alt="">
+                    <div class="current-order__col">
+                        <span class="current-order__name">Комикс</span>
+                        <span class="current-order__header-desc">Артикул №00001</span>
+                    </div>
+                    <div class="current-order__col">
+                        <strong>M</strong>
+                    </div>
+                    <div class="current-order__col">
+                        <span class="current-order__header-desc">Стоимость товара</span>
+                        <strong>2 000 ₽</strong>
+                    </div>
+                    <div class="current-order__col">
+                        <span class="current-order__header-desc">Количество</span>
+                        <strong>1</strong>
+                    </div>
+                    <div class="current-order__col">
+                        <span class="current-order__header-desc">Стоимость доставки</span>
+                        <strong>500 ₽</strong>
+                    </div>
                 </div>
-                <div class="current-order__col">
-                    <span class="current-order__header-desc">Стоимость товара</span>
-                    <strong>2 000 ₽</strong>
+                <div class="current-order__row">
+                    <img class="current-order__img" src="/assets/img/catalog/item-2.png" alt="">
+                    <div class="current-order__col">
+                        <span class="current-order__name">Комикс</span>
+                        <span class="current-order__header-desc">Артикул №00001</span>
+                    </div>
+                    <div class="current-order__col"></div>
+                    <div class="current-order__col">
+                        <span class="current-order__header-desc">Стоимость товара</span>
+                        <strong>2 000 ₽</strong>
+                    </div>
+                    <div class="current-order__col">
+                        <span class="current-order__header-desc">Количество</span>
+                        <strong>1</strong>
+                    </div>
+                    <div class="current-order__col">
+                        <span class="current-order__header-desc">Стоимость доставки</span>
+                        <strong>500 ₽</strong>
+                    </div>
                 </div>
-                <div class="current-order__col">
-                    <span class="current-order__header-desc">Количество</span>
-                    <strong>1</strong>
-                </div>
-                <div class="current-order__col">
-                    <span class="current-order__header-desc">Стоимость доставки</span>
-                    <strong>500 ₽</strong>
+                <div class="current-order__row">
+                    <img class="current-order__img" src="/assets/img/catalog/item-3.png" alt="">
+                    <div class="current-order__col">
+                        <span class="current-order__name">Комикс</span>
+                        <span class="current-order__header-desc">Артикул №00001</span>
+                    </div>
+                    <div class="current-order__col"></div>
+                    <div class="current-order__col">
+                        <span class="current-order__header-desc">Стоимость товара</span>
+                        <strong>2 000 ₽</strong>
+                    </div>
+                    <div class="current-order__col">
+                        <span class="current-order__header-desc">Количество</span>
+                        <strong>1</strong>
+                    </div>
+                    <div class="current-order__col">
+                        <span class="current-order__header-desc">Стоимость доставки</span>
+                        <strong>500 ₽</strong>
+                    </div>
                 </div>
             </div>
-            <div class="current-order__row">
-                <img class="current-order__img" src="/assets/img/catalog/item-2.png" alt="">
-                <div class="current-order__col">
-                    <span class="current-order__name">Комикс</span>
-                    <span class="current-order__header-desc">Артикул №00001</span>
+            <div class="current-order__total">
+                <div class="current-order__total-row">
+                    <span class="current-order__total-desc">Всего</span>
+                    <strong class="current-order__total-term">7 000 ₽</strong>
                 </div>
-                <div class="current-order__col">
-                    <span class="current-order__header-desc">Стоимость товара</span>
-                    <strong>2 000 ₽</strong>
+                <div class="current-order__total-row">
+                    <span class="current-order__total-desc">Промокод</span>
+                    <strong class="current-order__total-term">-500 ₽</strong>
                 </div>
-                <div class="current-order__col">
-                    <span class="current-order__header-desc">Количество</span>
-                    <strong>1</strong>
+                <div class="current-order__total-row">
+                    <span class="current-order__total-desc">Стоимость доставки</span>
+                    <strong class="current-order__total-term">500 ₽</strong>
                 </div>
-                <div class="current-order__col">
-                    <span class="current-order__header-desc">Стоимость доставки</span>
-                    <strong>500 ₽</strong>
-                </div>
-            </div>
-            <div class="current-order__row">
-                <img class="current-order__img" src="/assets/img/catalog/item-3.png" alt="">
-                <div class="current-order__col">
-                    <span class="current-order__name">Комикс</span>
-                    <span class="current-order__header-desc">Артикул №00001</span>
-                </div>
-                <div class="current-order__col">
-                    <span class="current-order__header-desc">Стоимость товара</span>
-                    <strong>2 000 ₽</strong>
-                </div>
-                <div class="current-order__col">
-                    <span class="current-order__header-desc">Количество</span>
-                    <strong>1</strong>
-                </div>
-                <div class="current-order__col">
-                    <span class="current-order__header-desc">Стоимость доставки</span>
-                    <strong>500 ₽</strong>
+                <div class="current-order__total-row">
+                    <span class="current-order__total-desc">Итого с доставкой</span>
+                    <strong class="current-order__total-term _color">7 000 ₽</strong>
                 </div>
             </div>
-        </div>
-        <div class="current-order__total">
-
+            <div class="current-order__info">
+                <div class="current-order__info-item margin-default">
+                    <span class="current-order__info-item-desc">Получатель</span>
+                    <p class="current-order__info-item-term">
+                        Иванов Иван Иванович, +437238924983, example@mail.com
+                    </p>
+                </div>
+                <div class="current-order__info-item margin-default">
+                    <span class="current-order__info-item-desc">Способ доставки</span>
+                    <p class="current-order__info-item-term">CDEK, До двери, 1 день</p>
+                </div>
+                <div class="current-order__info-item margin-default">
+                    <span class="current-order__info-item-desc">Адрес доставки</span>
+                    <p class="current-order__info-item-term">
+                        Россия, Московская область, Москва, Пушкина 123
+                    </p>
+                </div>
+            </div>
         </div>
     </div>
 </section>
