--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -45,6 +45,7 @@
 @import "blocks/age-control";
 @import "blocks/fly-cart";
 @import "blocks/current-order";
+@import "blocks/favorite-item";
 
 @import "pages/p-index";
 @import "pages/p-catalog";
@@ -53,4 +54,5 @@
 @import "pages/p-lk";
 @import "pages/p-history";
 @import "pages/p-success";
+@import "pages/p-favorites";
 @import "pages/p-404";
