Добавлены страницы восстановления пароля и регистрации

--- a/src/sass/blocks/default/form.scss
+++ b/src/sass/blocks/default/form.scss
@@ -24,6 +24,12 @@
         text-align: right;
     }
 
+    &__reg-link {
+        display: block;
+        width: 100%;
+        text-align: center;
+    }
+
     &__politics {
         font-size: var(--formPoliticsFontSize);
     }
