--- a/src/twig/pages/auth.twig
+++ b/src/twig/pages/auth.twig
@@ -27,6 +27,7 @@
                 <svg class="icon"><use xlink:href="#google"/></svg>
                 <span>Или войдите через Google </span>
             </button>
+            <a class="form__reg-link  link _revert" href="/reg.html">Зарегистрироваться</a>
         </form>
     </div>
 </div>
