--- a/src/sass/blocks/default/btn.scss
+++ b/src/sass/blocks/default/btn.scss
@@ -72,4 +72,9 @@
     &._paper-disabled {
         background: url('/assets/img/custom/paper.png');
     }
+
+    &._paper-purple {
+        color: var(--c-white);
+        background: var(--c-primary) url('/assets/img/custom/paper.png');
+    }
 }
