--- a/src/sass/pages/p-success.scss
+++ b/src/sass/pages/p-success.scss
@@ -14,4 +14,14 @@
         font-family: var(--f-secondary);
         text-align: center;
     }
+
+    &__btn-inner {
+        display: grid;
+        grid-template-columns: 1fr;
+        grid-gap: 20px;
+        max-width: 600px;
+        @include media-breakpoint-up(md) {
+            grid-template-columns: 1fr 1fr;
+        }
+    }
 }
