Сделана страница успешного оформления заказа

--- a/src/twig/pages/success.twig
+++ b/src/twig/pages/success.twig
@@ -11,7 +11,7 @@
         <h1 class="h2 margin-default custom-title">Платеж подтвержден</h1>
         <p class="p-success__order-number margin-small">Заказ №432432</p>
         <p>Товары в заказе</p>
-        <div class="margin-default current-order__body js-order-body">
+        <div class="current-order__body js-order-body">
             <div class="current-order__items margin-default">
                 <div class="current-order__row">
                     <img class="current-order__img" src="/assets/img/catalog/item-1.png" alt="">
