Сделана страница успешного оформления заказа

--- a/src/twig/pages/success.twig
+++ b/src/twig/pages/success.twig
@@ -10,7 +10,7 @@
         </svg>
         <h1 class="h2 margin-default custom-title">Платеж подтвержден</h1>
         <p class="p-success__order-number margin-small">Заказ №432432</p>
-        <p>Товары в заказе</p>
+        <p class="p-success__text">Товары в заказе</p>
         <div class="current-order__body js-order-body">
             <div class="current-order__items margin-default">
                 <div class="current-order__row">
