--- a/src/sass/blocks/default/checkbox.scss
+++ b/src/sass/blocks/default/checkbox.scss
@@ -10,7 +10,7 @@
     display: grid;
     align-items: center;
     width: 100%;
-    height: var(--checkboxSize);
+    //height: var(--checkboxSize);
 
     &__input {
         position: absolute;
