--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -46,6 +46,7 @@
 @import "blocks/fly-cart";
 @import "blocks/current-order";
 @import "blocks/favorite-item";
+@import "blocks/order-first-step";
 
 @import "pages/p-index";
 @import "pages/p-catalog";
@@ -55,4 +56,5 @@
 @import "pages/p-history";
 @import "pages/p-success";
 @import "pages/p-favorites";
+@import "pages/p-order";
 @import "pages/p-404";
