--- a/src/twig/pages/success.twig
+++ b/src/twig/pages/success.twig
@@ -11,108 +11,112 @@
         <h1 class="h2 margin-default custom-title">Платеж подтвержден</h1>
         <p class="p-success__order-number margin-small">Заказ №432432</p>
         <p class="p-success__text margin-small">Товары в заказе</p>
-        <div class="current-order__body js-order-body">
-            <div class="current-order__items margin-default">
-                <div class="current-order__row">
-                    <img class="current-order__img" src="/assets/img/catalog/item-1.png" alt="">
-                    <div class="current-order__col">
-                        <span class="current-order__name">Комикс</span>
-                        <span class="current-order__header-desc">Артикул №00001</span>
+        <section class="current-order">
+            <div class="current-order__inner _no-border">
+                <div class="current-order__body js-order-body">
+                    <div class="current-order__items margin-default">
+                        <div class="current-order__row">
+                            <img class="current-order__img" src="/assets/img/catalog/item-1.png" alt="">
+                            <div class="current-order__col">
+                                <span class="current-order__name">Комикс</span>
+                                <span class="current-order__header-desc">Артикул №00001</span>
+                            </div>
+                            <div class="current-order__col">
+                                <strong>M</strong>
+                            </div>
+                            <div class="current-order__col">
+                                <span class="current-order__header-desc">Стоимость товара</span>
+                                <strong>2 000 ₽</strong>
+                            </div>
+                            <div class="current-order__col">
+                                <span class="current-order__header-desc">Количество</span>
+                                <strong>1</strong>
+                            </div>
+                            <div class="current-order__col">
+                                <span class="current-order__header-desc">Стоимость доставки</span>
+                                <strong>500 ₽</strong>
+                            </div>
+                        </div>
+                        <div class="current-order__row">
+                            <img class="current-order__img" src="/assets/img/catalog/item-2.png" alt="">
+                            <div class="current-order__col">
+                                <span class="current-order__name">Комикс</span>
+                                <span class="current-order__header-desc">Артикул №00001</span>
+                            </div>
+                            <div class="current-order__col"></div>
+                            <div class="current-order__col">
+                                <span class="current-order__header-desc">Стоимость товара</span>
+                                <strong>2 000 ₽</strong>
+                            </div>
+                            <div class="current-order__col">
+                                <span class="current-order__header-desc">Количество</span>
+                                <strong>1</strong>
+                            </div>
+                            <div class="current-order__col">
+                                <span class="current-order__header-desc">Стоимость доставки</span>
+                                <strong>500 ₽</strong>
+                            </div>
+                        </div>
+                        <div class="current-order__row">
+                            <img class="current-order__img" src="/assets/img/catalog/item-3.png" alt="">
+                            <div class="current-order__col">
+                                <span class="current-order__name">Комикс</span>
+                                <span class="current-order__header-desc">Артикул №00001</span>
+                            </div>
+                            <div class="current-order__col"></div>
+                            <div class="current-order__col">
+                                <span class="current-order__header-desc">Стоимость товара</span>
+                                <strong>2 000 ₽</strong>
+                            </div>
+                            <div class="current-order__col">
+                                <span class="current-order__header-desc">Количество</span>
+                                <strong>1</strong>
+                            </div>
+                            <div class="current-order__col">
+                                <span class="current-order__header-desc">Стоимость доставки</span>
+                                <strong>500 ₽</strong>
+                            </div>
+                        </div>
                     </div>
-                    <div class="current-order__col">
-                        <strong>M</strong>
+                    <div class="current-order__total">
+                        <div class="current-order__total-row">
+                            <span class="current-order__total-desc">Всего</span>
+                            <strong class="current-order__total-term">7 000 ₽</strong>
+                        </div>
+                        <div class="current-order__total-row">
+                            <span class="current-order__total-desc">Промокод</span>
+                            <strong class="current-order__total-term">-500 ₽</strong>
+                        </div>
+                        <div class="current-order__total-row">
+                            <span class="current-order__total-desc">Стоимость доставки</span>
+                            <strong class="current-order__total-term">500 ₽</strong>
+                        </div>
+                        <div class="current-order__total-row">
+                            <span class="current-order__total-desc">Итого с доставкой</span>
+                            <strong class="current-order__total-term _color">7 000 ₽</strong>
+                        </div>
                     </div>
-                    <div class="current-order__col">
-                        <span class="current-order__header-desc">Стоимость товара</span>
-                        <strong>2 000 ₽</strong>
-                    </div>
-                    <div class="current-order__col">
-                        <span class="current-order__header-desc">Количество</span>
-                        <strong>1</strong>
-                    </div>
-                    <div class="current-order__col">
-                        <span class="current-order__header-desc">Стоимость доставки</span>
-                        <strong>500 ₽</strong>
-                    </div>
-                </div>
-                <div class="current-order__row">
-                    <img class="current-order__img" src="/assets/img/catalog/item-2.png" alt="">
-                    <div class="current-order__col">
-                        <span class="current-order__name">Комикс</span>
-                        <span class="current-order__header-desc">Артикул №00001</span>
-                    </div>
-                    <div class="current-order__col"></div>
-                    <div class="current-order__col">
-                        <span class="current-order__header-desc">Стоимость товара</span>
-                        <strong>2 000 ₽</strong>
-                    </div>
-                    <div class="current-order__col">
-                        <span class="current-order__header-desc">Количество</span>
-                        <strong>1</strong>
-                    </div>
-                    <div class="current-order__col">
-                        <span class="current-order__header-desc">Стоимость доставки</span>
-                        <strong>500 ₽</strong>
-                    </div>
-                </div>
-                <div class="current-order__row">
-                    <img class="current-order__img" src="/assets/img/catalog/item-3.png" alt="">
-                    <div class="current-order__col">
-                        <span class="current-order__name">Комикс</span>
-                        <span class="current-order__header-desc">Артикул №00001</span>
-                    </div>
-                    <div class="current-order__col"></div>
-                    <div class="current-order__col">
-                        <span class="current-order__header-desc">Стоимость товара</span>
-                        <strong>2 000 ₽</strong>
-                    </div>
-                    <div class="current-order__col">
-                        <span class="current-order__header-desc">Количество</span>
-                        <strong>1</strong>
-                    </div>
-                    <div class="current-order__col">
-                        <span class="current-order__header-desc">Стоимость доставки</span>
-                        <strong>500 ₽</strong>
+                    <div class="current-order__info">
+                        <div class="current-order__info-item margin-default">
+                            <span class="current-order__info-item-desc">Получатель</span>
+                            <p class="current-order__info-item-term">
+                                Иванов Иван Иванович, +437238924983, example@mail.com
+                            </p>
+                        </div>
+                        <div class="current-order__info-item margin-default">
+                            <span class="current-order__info-item-desc">Способ доставки</span>
+                            <p class="current-order__info-item-term">CDEK, До двери, 1 день</p>
+                        </div>
+                        <div class="current-order__info-item margin-default">
+                            <span class="current-order__info-item-desc">Адрес доставки</span>
+                            <p class="current-order__info-item-term">
+                                Россия, Московская область, Москва, Пушкина 123
+                            </p>
+                        </div>
                     </div>
                 </div>
             </div>
-            <div class="current-order__total">
-                <div class="current-order__total-row">
-                    <span class="current-order__total-desc">Всего</span>
-                    <strong class="current-order__total-term">7 000 ₽</strong>
-                </div>
-                <div class="current-order__total-row">
-                    <span class="current-order__total-desc">Промокод</span>
-                    <strong class="current-order__total-term">-500 ₽</strong>
-                </div>
-                <div class="current-order__total-row">
-                    <span class="current-order__total-desc">Стоимость доставки</span>
-                    <strong class="current-order__total-term">500 ₽</strong>
-                </div>
-                <div class="current-order__total-row">
-                    <span class="current-order__total-desc">Итого с доставкой</span>
-                    <strong class="current-order__total-term _color">7 000 ₽</strong>
-                </div>
-            </div>
-            <div class="current-order__info">
-                <div class="current-order__info-item margin-default">
-                    <span class="current-order__info-item-desc">Получатель</span>
-                    <p class="current-order__info-item-term">
-                        Иванов Иван Иванович, +437238924983, example@mail.com
-                    </p>
-                </div>
-                <div class="current-order__info-item margin-default">
-                    <span class="current-order__info-item-desc">Способ доставки</span>
-                    <p class="current-order__info-item-term">CDEK, До двери, 1 день</p>
-                </div>
-                <div class="current-order__info-item margin-default">
-                    <span class="current-order__info-item-desc">Адрес доставки</span>
-                    <p class="current-order__info-item-term">
-                        Россия, Московская область, Москва, Пушкина 123
-                    </p>
-                </div>
-            </div>
-        </div>
+        </section>
         <div class="p-success__btn-inner">
             <a class="btn _middle _paper" href="/">Вернуться на главную</a>
             <a class="btn _middle _paper _paper-purple" href="/lk.html">Личный кабинет</a>
