--- a/src/sass/blocks/default/input2.scss
+++ b/src/sass/blocks/default/input2.scss
@@ -24,12 +24,13 @@
 
     &__text {
         width: 100%;
-        height: 40px;
+        height: 60px;
         padding: 14px 16px;
         border: var(--border);
         border-color: var(--inputBorderColor);
         border-radius: var(--inputBorderRadius);
         font-size: var(--inputFontSize);
+        font-weight: 400;
         color: var(--inputColor);
         background-color: var(--inputBg);
         transition: var(--transitions);
@@ -44,10 +45,6 @@
             + label {
                 color: var(--inputBorderColorActive);
             }
-        }
-
-        @include media-breakpoint-up(xxl) {
-            height: 60px;
         }
     }
 
