--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -31,6 +31,7 @@
 @import "layouts/body";
 @import "layouts/header";
 @import "layouts/footer";
+@import "layouts/footer-menu";
 @import "layouts/main-menu";
 @import "layouts/sub-menu";
 @import "layouts/mobile-side";
@@ -47,6 +48,7 @@
 @import "blocks/current-order";
 @import "blocks/favorite-item";
 @import "blocks/order-first-step";
+@import "blocks/requisites";
 
 @import "pages/p-index";
 @import "pages/p-catalog";
