--- a/src/twig/layouts/footer.twig
+++ b/src/twig/layouts/footer.twig
@@ -1,7 +1,10 @@
 <footer class="footer">
-    <div class="footer__container container-fluid">
+    <div class="footer__container container-fluid margin-default">
         <span class="footer__logo">Eva Elfie</span>
         <p class="footer__copyright">Все права защищены © 2021</p>
         {% include '../components/socials.twig' %}
+    </div>
+    <div class="container-fluid footer__container-second">
+        {% include 'footer-menu.twig' %}
     </div>
 </footer>
