--- a/src/twig/pages/contacts.twig
+++ b/src/twig/pages/contacts.twig
@@ -5,46 +5,74 @@
 {% block mainClass %}p-contacts section{% endblock %}
 
 {% block content %}
-    <div class="container-xl p-contacts__container">
-        <div class="p-contacts__inner">
-            <h1 class="h2 margin-big-second custom-title">Контакты</h1>
-            <div class="p-contacts__item margin-default">
-                <span class="p-contacts__item-desc">Позвонить нам</span>
-                <a class="p-contacts__item-link link" href="tel:+32903247324932">
-                    +32903247324932
+    <div class="container-xl p-contacts__container margin-default">
+        <h1 class="h2 margin-big-second custom-title _centered">Контакты</h1>
+        <div class="p-contacts__inner margin-default">
+            <div class="p-contacts__item">
+                <span class="p-contacts__item-desc">Телефон для связи</span>
+                <a class="p-contacts__item-link link" href="tel:+79850539402">
+                    +7 (985) 053 94 02
                 </a>
             </div>
-            <div class="p-contacts__item margin-default">
-                <span class="p-contacts__item-desc">Написать нам</span>
+            <div class="p-contacts__item">
+                <span class="p-contacts__item-desc">Пункты самовывоза</span>
+                <div class="p-contacts__item-link">
+                    Москва, Большой Ордынский пер., 3 <br>
+                    <p class="p-contacts__item-small">
+                        График работы Пункта Самовывоза: <br>
+                        Понедельник-Пятница 09:00-18:00
+                    </p>
+                </div>
+            </div>
+        </div>
+        <div class="p-contacts__inner margin-default">
+            <div class="p-contacts__item">
+                <span class="p-contacts__item-desc">Почта по вопросам заказов</span>
                 <a class="p-contacts__item-link link" href="tel:mail@gmail.com">
                     mail@gmail.com
                 </a>
             </div>
-            {% include '../components/socials.twig' %}
+            <div class="p-contacts__item">
+                <span class="p-contacts__item-desc">Техподдержка</span>
+                <a class="p-contacts__item-link link" href="tel:mail@gmail.com">
+                    mail@gmail.com
+                </a>
+            </div>
         </div>
-        <div class="form-inner">
-            <p class="form-inner__form-title">Есть вопросы?</p>
-            <p class="form-inner__form-desc">
-                Заполните форму ниже и мы свяжемся с вами в ближайшем времени
-            </p>
-            <form action="/" class="form">
-                <div class="input">
-                    <input class="input__text" type="text" placeholder="Ваше имя" required>
-                </div>
-                <div class="input">
-                    <input class="input__text phone" type="tel" placeholder="Ваш номер телефона" required>
-                </div>
-                <div class="input">
-                    <input class="input__text" type="email" placeholder="Ваш email" required>
-                </div>
-                <button class="btn _paper _big">Отправить заявку</button>
-            </form>
+        <div class="p-contacts__map margin-default" style="position:relative;overflow:hidden;">
+            <iframe src="https://yandex.ru/map-widget/v1/-/CCUyMRCwPD" width="560" height="400" frameborder="1"
+                    allowfullscreen="true" style="position:relative;">
+            </iframe>
         </div>
-        <div class="p-contacts__form-wrapper hidden _success">
-            <p class="p-contacts__form-title">Заявка успешно отправлена</p>
-            <p class="p-contacts__form-desc">
-                Мы свяжемся с Вами в ближайшее время!
-            </p>
+        {% include '../components/socials.twig' %}
+    </div>
+    <div class="container-xl p-contacts__container-second">
+        <div>
+            <div class="form-inner">
+                <p class="form-inner__form-title">Есть вопросы?</p>
+                <p class="form-inner__form-desc">
+                    Заполните форму ниже и мы свяжемся с вами в ближайшем времени
+                </p>
+                <form action="/" class="form">
+                    <div class="input">
+                        <input class="input__text" type="text" placeholder="Ваше имя" required>
+                    </div>
+                    <div class="input">
+                        <input class="input__text phone" type="tel" placeholder="Ваш номер телефона" required>
+                    </div>
+                    <div class="input">
+                        <input class="input__text" type="email" placeholder="Ваш email" required>
+                    </div>
+                    <button class="btn _paper _middle">Отправить заявку</button>
+                </form>
+            </div>
+            <div class="p-contacts__form-wrapper hidden _success">
+                <p class="p-contacts__form-title">Заявка успешно отправлена</p>
+                <p class="p-contacts__form-desc">
+                    Мы свяжемся с Вами в ближайшее время!
+                </p>
+            </div>
         </div>
+        {% include '../components/requisites.twig' %}
     </div>
 {% endblock %}
