--- a/src/sass/pages/p-card.scss
+++ b/src/sass/pages/p-card.scss
@@ -49,4 +49,38 @@
             margin-top: 8px;
         }
     }
+
+    &__size-list {
+        display: grid;
+        grid-template-columns: repeat(4, 60px);
+        grid-gap: 16px;
+        @include media-breakpoint-up(lg) {
+            grid-auto-flow: column;
+            grid-auto-columns: 80px;
+            grid-template-columns: none;
+        }
+    }
+
+    &__size-item {
+        max-width: 80px;
+        padding: 4px 8px;
+        border: var(--border);
+        border-radius: var(--border-radius);
+        transition: var(--transitions);
+        &:hover, &._active {
+            border-color: var(--c-primary);
+            color: var(--c-primary);
+        }
+    }
+
+    &__size-item-main {
+        display: block;
+        text-align: center;
+    }
+
+    &__size-item-second {
+        display: block;
+        font-size: var(--f-s-small);
+        text-align: center;
+    }
 }
