--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -1,3 +1,4 @@
+@import "../../node_modules/simple-lightbox/dist/simpleLightbox.min.css";
 @import "../../node_modules/normalize.css/normalize.css";
 
 @import "global/fonts";
