--- a/src/sass/blocks/fly-cart.scss
+++ b/src/sass/blocks/fly-cart.scss
@@ -1,8 +1,8 @@
 .fly-cart {
     position: fixed;
-    top: calc(var(--mobileHeaderHeight) + 4px);
+    top: 0;
     right: 0;
-    z-index: 5;
+    z-index: 900;
     width: 100vw;
     max-height: 100vh;
     padding: 32px 16px 160px;
